--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ jobs:
       - uses: action/yaml-lint@v1
       - name: Install dependencies
       id:install
-      run：|
+      run:|
         sudo -E apt-get -y update
         sudo -E apt-get -y install gcc make gettext bison flex bc zlib1g-dev libncurses5-dev lzma
         sudo -E apt-get clean
@@ -18,7 +18,7 @@ jobs:
       id:build
       working-directory: /builder
       if: ${{ steps.install.outputs.status }} == 'success' && !cancelled()
-      run：|
+      run:|
         cd /builder
         git clone -q --single-branch --depth=1 --branch=v2.x https://github.com/cndeep/HiSTBLinuxV100R005C00SPC050 mv310
         cd mv310
@@ -29,7 +29,7 @@ jobs:
       - name: cp kernel
        id:compile
         if: ${{ steps.build.outputs.status }} == 'success' && !cancelled()
-        run：|
+        run:|
           ls -R /builder/out/hi3798mv310
           tar -cvf hi3798mv310.tar /builder/out/hi3798mv310
     - name: 'Upload Artifact'
