--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,4 +14,17 @@ jobs:
         run: |
           sudo -E apt-get -y update
           sudo -E apt-get -y install gcc make gettext bison flex bc zlib1g-dev libncurses5-dev lzma
-          echo "okokok"
+          echo "status=success" >> ${GITHUB_OUTPUT}
+      - name: make build
+        id: build
+        working-directory: /builder
+        if: ${{ steps.init.outputs.status }} == 'success' && !cancelled()
+        run: |
+          mkdir -p /builder
+          git clone -q --single-branch --depth=1 --branch=v2.x https://github.com/cndeep/HiSTBLinuxV100R005C00SPC050 mv310
+          cd mv310
+          cp configs/hi3798mv310/hi3798mv31dmg_hi3798mv310_cfg.mak ./cfg.mak
+          source ./env.sh
+          make build -j4 2>&1  | tee -a buildlog.txt
+          ls -R /builder/out/hi3798mv310
+          cho "status=success" >> ${GITHUB_OUTPUT}
