--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,7 @@ jobs:
           sudo -E apt-get -y update
           sudo -E apt-get -y install gcc make gettext bison flex bc zlib1g-dev libncurses5-dev lzma git
           sudo mkdir -p /builder
+          sudo chown -R runner.runner /builder
           echo "status=success" >> ${GITHUB_OUTPUT}
       - name: make build
         id: build
