--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
           source ./env.sh
           make linux -j4 2>&1  | tee -a buildlog.txt
           #ls -R /builder/mv310/out
-          tar -cvf hi3798mv310_image.tar /builder/mv310/out/hi3798mv310/hi3798mv31dmg/image
+          tar -cvfP hi3798mv310_image.tar /builder/mv310/out/hi3798mv310/hi3798mv31dmg/image/*
           #tar -cvf hi3798mv310_kernel.tar /builder/mv310/out
           cho "status=success" >> ${GITHUB_OUTPUT}
       - name: Upload Kernel to Release
