--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,10 +26,11 @@ jobs:
           cd mv310
           cp configs/hi3798mv310/hi3798mv31dmg_hi3798mv310_cfg.mak ./cfg.mak
           source ./env.sh
-          make linux -j4 2>&1  | tee -a buildlog.txt
+          make hiboot
+          #make linux -j4 2>&1  | tee -a buildlog.txt
           #ls -R /builder/mv310/out
-          tar -cvfP hi3798mv310_image.tar /builder/mv310/out/hi3798mv310/hi3798mv31dmg/image/*
-          #tar -cvf hi3798mv310_kernel.tar /builder/mv310/out
+          #tar -cvfP hi3798mv310_image.tar /builder/mv310/out/hi3798mv310/hi3798mv31dmg/image/*
+          tar -cvf hi3798mv310_kernel.tar /builder/mv310/out/*
           cho "status=success" >> ${GITHUB_OUTPUT}
       - name: Upload Kernel to Release
         id: tar
@@ -38,7 +39,7 @@ jobs:
         with:
           tag: mv310_kernel
           #artifacts: /builder/hi3798mv310_image.tar,/builder/hi3798mv310_kernel.tar
-          artifacts: /builder/hi3798mv310_image.tar
+          artifacts: /builder/hi3798mv310_kernel.tar
           allowUpdates: true
           token: ${{ secrets.GITHUB_TOKEN }}
           body: |
