--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,11 +26,11 @@ jobs:
           cd mv310
           cp configs/hi3798mv310/hi3798mv31dmg_hi3798mv310_cfg.mak ./cfg.mak
           source ./env.sh
-          make hiboot
-          #make linux -j4 2>&1  | tee -a buildlog.txt
+          #make hiboot
+          make linux -j4 2>&1  | tee -a buildlog.txt
           #ls -R /builder/mv310/out
-          #tar -cvfP hi3798mv310_image.tar /builder/mv310/out/hi3798mv310/hi3798mv31dmg/image/*
-          tar -cvf hi3798mv310_kernel.tar /builder/mv310/out/hi3798mv310/hi3798mv31dmg/image/*
+          cp /builder/mv310/out/hi3798mv310/hi3798mv31dmg/image/emmc_image/fastboot.bin /builder/fastboot_hi3798mv31dmg.bin
+          #tar -cvf hi3798mv310_kernel.tar /builder/mv310/out/hi3798mv310/hi3798mv31dmg/image/*
           echo "status=success" >> ${GITHUB_OUTPUT}
       - name: Upload Kernel to Release
         id: tar
@@ -39,7 +39,7 @@ jobs:
         with:
           tag: mv310_kernel
           #artifacts: /builder/hi3798mv310_image.tar,/builder/hi3798mv310_kernel.tar
-          artifacts: /builder/mv310/hi3798mv310_kernel.tar
+          artifacts: /builder/fastboot_hi3798mv31dmg.bin,/builder/mv310/out/hi3798mv310/hi3798mv31dmg/image/emmc_image/hi_kernel.bin
           allowUpdates: true
           token: ${{ secrets.GITHUB_TOKEN }}
           body: |
